Изменён принцип вывода и изменения БД

--- a/app/src/main/res/layout/activity_changing_data.xml
+++ b/app/src/main/res/layout/activity_changing_data.xml
@@ -20,6 +20,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint ="Марка"
+        android:inputType="textCapWords"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/heading"
@@ -30,6 +31,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint ="Модель"
+        android:inputType="textCapWords"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/heading"
@@ -40,6 +42,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint ="Год производства"
+        android:inputType="date"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +90,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:onClick="GoExit"
-        android:text="Перейти к списку"
+        android:text="Вернуться в главное меню"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
