--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="buttonBackground">#AAD579</color>
+    <color name="supportiveColor">#789559</color>
+    <color name="mainColor">#4A7719</color>
 </resources>
