--- a/app/src/main/res/layout/activity_single_entry_change.xml
+++ b/app/src/main/res/layout/activity_single_entry_change.xml
@@ -10,44 +10,62 @@
         android:id="@+id/heading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Изменение одной записи"
+        android:text="@string/header_single_entry_change"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <EditText
         android:id="@+id/textMarka"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Марка"
+        android:hint="@string/et_Marka"
         android:inputType="textCapWords"
         android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf = "@+id/heading"/>
+        app:layout_constraintTop_toBottomOf = "@+id/heading"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/textModel"
+        />
 
     <EditText
         android:id="@+id/textModel"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Модель"
+        android:hint="@string/et_Model"
         android:inputType="textCapWords"
         android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf = "@+id/textMarka" />
+        app:layout_constraintTop_toBottomOf = "@+id/heading"
+        app:layout_constraintStart_toEndOf="@+id/textMarka"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 
     <EditText
         android:id="@+id/textYearProduction"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Год производства"
+        android:hint="@string/et_year_production"
         android:inputType="date"
         android:textAlignment="center"
         app:layout_constraintTop_toBottomOf="@+id/textModel" />
+
+    <ImageView
+        android:id="@+id/Picture"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/textYearProduction"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/buttonChanging"
+        android:layout_margin="20dp"
+        />
 
     <TableRow
         android:id="@+id/buttonChanging"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textYearProduction"
+        app:layout_constraintBottom_toTopOf="@+id/Exit"
+        android:layout_margin="10dp"
         android:layout_weight="1">
 
         <androidx.appcompat.widget.AppCompatButton
@@ -58,7 +76,7 @@
             android:layout_weight="1"
             android:onClick="updateLine"
             android:background="@drawable/batton_background"
-            android:text="Изменить" />
+            android:text="@string/btn_update" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnDelete"
@@ -68,7 +86,7 @@
             android:layout_weight="1"
             android:onClick="deleteLine"
             android:background="@drawable/batton_background"
-            android:text="Удалить" />
+            android:text="@string/btn_delete" />
     </TableRow>
 
     <androidx.appcompat.widget.AppCompatButton
@@ -78,7 +96,7 @@
         android:layout_margin="10dp"
         android:onClick="Exit"
         android:background="@drawable/batton_background"
-        android:text="Назад"
+        android:text="@string/btn_exit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
