--- a/app/src/main/res/layout/activity_single_entry_change.xml
+++ b/app/src/main/res/layout/activity_single_entry_change.xml
@@ -52,12 +52,25 @@
         android:id="@+id/Picture"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/textYearProduction"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/buttonChanging"
         android:layout_margin="20dp"
-        />
+        android:onClick="updatePicture"
+        app:layout_constraintBottom_toTopOf="@+id/deletePicture"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textYearProduction" />
+
+    <TextView
+        android:id="@+id/deletePicture"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:onClick="deletePicture"
+        android:text="@string/delete_picture"
+        android:textAlignment="center"
+        android:textColor="@color/mainColor"
+        app:layout_constraintBottom_toTopOf="@+id/buttonChanging"
+        app:layout_constraintTop_toBottomOf="@+id/Picture"
+        tools:layout_editor_absoluteX="10dp" />
 
     <TableRow
         android:id="@+id/buttonChanging"
