--- a/app/src/main/res/drawable/batton_background.xml
+++ b/app/src/main/res/drawable/batton_background.xml
@@ -6,4 +6,7 @@
         android:right="15dp"
         />
     <corners android:radius="10dp"/>
+    <stroke android:color="@color/supportiveColor"
+        android:width="1dp"
+        />
 </shape>
