--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="buttonBackground">#AAD579</color>
     <color name="supportiveColor">#789559</color>
     <color name="mainColor">#4A7719</color>
+    <color name="blue">#1068AE</color>
 </resources>
