Добавлен поиск и сортировка

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,18 +20,18 @@
         android:id="@+id/buttonChanging"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/Header"
+        android:layout_weight="1"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_weight="1">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/Header">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/OutputList"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/batton_background"
-            android:layout_weight="1"
             android:layout_margin="3dp"
+            android:layout_weight="1"
+            android:background="@drawable/batton_background"
             android:onClick="GetTextFromSql"
             android:text="@string/btn_output_list" />
 
@@ -39,24 +39,155 @@
             android:id="@+id/InsertList"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_margin="3dp"
+            android:layout_weight="1"
             android:background="@drawable/batton_background"
             android:onClick="GoChange"
-            android:text="@string/btn_change_data"/>
+            android:text="@string/btn_change_data" />
     </TableRow>
+
+    <TextView
+        android:id="@+id/headerSearch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="Модуль поиска ↑"
+        android:textAlignment="center"
+        android:visibility="gone"
+        android:onClick="SearchModule"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonChanging" />
+
+    <TableLayout
+        android:id="@+id/tableSearch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/headerSearch">
+
+        <TableRow
+            android:layout_margin="5dp"
+            android:layout_weight="1">
+
+            <Spinner
+                android:id="@+id/chingSearch"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/spinner"
+                android:contentDescription="Сортировка"
+                android:entries="@array/fieldsName" />
+
+            <EditText
+                android:id="@+id/search"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:hint="Введите значение"
+                android:textAlignment="center" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_margin="5dp"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/headerOrder"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Сортировка по столбцам"
+                android:textAlignment="center" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_margin="5dp"
+            android:layout_weight="1">
+
+            <Spinner
+                android:id="@+id/sorting1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/spinner"
+                android:contentDescription="Сортировка_параметр1"
+                android:entries="@array/fieldsName" />
+
+            <Spinner
+                android:id="@+id/order1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/spinner"
+                android:contentDescription="Сортировка_параметр1"
+                android:entries="@array/order" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_margin="5dp"
+            android:layout_weight="1">
+
+            <Spinner
+                android:id="@+id/sorting2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/spinner"
+                android:contentDescription="Сортировка_параметр2"
+                android:entries="@array/fieldsName" />
+
+            <Spinner
+                android:id="@+id/order2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/spinner"
+                android:contentDescription="Сортировка_параметр2"
+                android:entries="@array/order" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_margin="5dp"
+            android:layout_weight="1">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnSearch"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/batton_background"
+                android:onClick="search"
+                android:text="Найти" />
+
+        </TableRow>
+
+    </TableLayout>
 
     <ScrollView
         android:id="@+id/scrollable"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="5dp"
+        android:layout_weight="1"
+        android:scrollbars="none"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/buttonChanging"
-        android:layout_weight="1"
-        android:scrollbars="none">
+        app:layout_constraintTop_toBottomOf="@id/tableSearch">
 
         <TableLayout
             android:id="@+id/List"
