--- a/app/src/main/res/layout/item_mask.xml
+++ b/app/src/main/res/layout/item_mask.xml
@@ -17,7 +17,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Марка"
+        android:text="@string/et_Marka"
         android:textSize="20dp"
         android:layout_marginLeft="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +28,7 @@
         android:id="@+id/textModel"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Модель"
+        android:text="@string/et_Model"
         android:textSize="20dp"
         android:layout_marginLeft="10dp"
         app:layout_constraintTop_toBottomOf="@+id/textMarka"
@@ -39,7 +39,7 @@
         android:id="@+id/textYearProduction"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Год производства"
+        android:text="@string/et_year_production"
         android:textSize="20dp"
         android:layout_marginLeft="10dp"
         app:layout_constraintTop_toBottomOf="@+id/textModel"
